<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#890E4F">
        <TextView
            android:id="@+id/nombreCompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/unicaone"
            android:textSize="30dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="60dp">
            <TextView
                android:id="@+id/txtnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_nombre"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                />
            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                android:textColor="#890E4F"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:id="@+id/txtApePat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_apellido_Paterno"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/apePat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                android:textColor="#890E4F"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:id="@+id/txtapeMat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_apellido_Materno"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/apeMat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                android:textColor="#890E4F"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:id="@+id/txtRControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rControl"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/rControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                android:textColor="#890E4F"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:id="@+id/txtFNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_fecha"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/fNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                android:textColor="#890E4F"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_correoElectronico"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                android:textColor="#890E4F"
                android:layout_marginLeft="30dp"/>
            <TextView
                android:id="@+id/txtContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_contraseña"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/contra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/unicaone"
                android:textSize="20dp"
                android:textColor="#890E4F"
                android:layout_marginLeft="30dp"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>